--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<sonar.organization>sonarcubetest1</sonar.organization>
-		<sonar.projectKey>sonarcubetest1</sonar.projectKey>
+		<sonar.organization>pavi</sonar.organization>
+		<sonar.projectKey>pavi</sonar.projectKey>
 		<sonar.projectName>sample</sonar.projectName>
 	</properties>
 	<dependencies>
